--- a/index.html
+++ b/index.html
@@ -1,34 +1,21 @@
-<!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>   
+<meta name="viewport" content="width=device-width, initial-scale=1"> 
 <link rel="stylesheet" href="main.css">
 <script src="control.js"></script>
-
+<title>Ingreso al sistema</title>
 </head>
-<body>
-
-<h3>Ingreso al sistema</h3>
-
-<div class="container">
-  <form>
-    <label for="usrname">Usuario</label>
-    <input type="text" id="usrname" name="usrname" required>
-
-    <label for="psw">Clave</label>
-    <input type="password" id="psw" name="psw" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
-    
-    <input type="submit" value="Ingresar">
-  </form>
-</div>
-
-<div id="message">
-  <h3>Password must contain the following:</h3>
-  <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
-  <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
-  <p id="number" class="invalid">A <b>number</b></p>
-  <p id="length" class="invalid">Minimum <b>8 characters</b></p>
-</div>
-
+<body> 
+  <h2>Ingreso al sistema</h2>     
+  <div class="container">
+    <form name="login"  method="post"  action="#" onsubmit="return validate();">  
+      <label for="usuario">Usuario:</label>
+      <input type="text" id="usuario" name="usuario" required/><br>
+      <label for="contrasenia">Contraseña:</label>
+      <input type="password" id="contrasenia" name="contrasenia" required/><br>
+      <input type="submit" value="Ingresar">  
+    </form>  
+    </div>
 </body>
 </html>
